[package]
name = "torsh-profiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Performance profiling and monitoring for ToRSh"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
torsh-core = { workspace = true }
torsh-tensor = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
backtrace = "0.3"
num_cpus = "1.17"
scirs2-core = { workspace = true }
anyhow = "1.0"
log = "0.4"
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
uuid = { version = "1.18", features = ["v4"] }
prometheus = "0.14"

[dev-dependencies]
criterion = { workspace = true }
tokio = { version = "1.47", features = ["full"] }
