[package]
name = "torsh-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Python bindings for ToRSh - PyTorch-compatible deep learning in Rust"

[lints]
workspace = true

[lib]
name = "torsh_python"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
numpy = "0.26"

# ToRSh crates
torsh-core = { workspace = true }
# torsh-tensor = { path = "../torsh-tensor" }  # Temporarily disabled due to scirs2-autograd conflicts
# torsh-nn = { path = "../torsh-nn" }  # Temporarily disabled due to scirs2-autograd conflicts
# torsh-optim = { path = "../torsh-optim" }  # Temporarily disabled due to scirs2-autograd conflicts
# torsh-data = { path = "../torsh-data" }  # Temporarily disabled due to compilation errors
# torsh-autograd = { path = "../torsh-autograd" }  # Temporarily disabled due to scirs2 API incompatibilities
# torsh-distributed = { path = "../torsh-distributed" }  # Temporarily disabled due to compilation errors

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
num-traits = "0.2"
parking_lot = "0.12"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[package.metadata.maturin]
python-source = "python"
module-name = "torsh"
bindings = "pyo3"
