[package]
name = "torsh-quantization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model quantization for ToRSh neural networks"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
torsh-core = { workspace = true, features = ["serialize"] }
torsh-tensor = { workspace = true, default-features = false, features = ["std"] }
# torsh-nn = { path = "../torsh-nn" } # Temporarily disabled due to autograd issues
thiserror = { workspace = true }
scirs2-core = { workspace = true, features = ["random", "simd", "benchmarking"] }
rayon = "1.10" # For parallel processing optimizations
serde_json = "1.0" # For JSON serialization
serde = { version = "1.0", features = ["derive"] } # For serialization
num_cpus = "1.17" # For hardware info collection

[features]
default = ["std"]
std = []

[dev-dependencies]
approx = { workspace = true }
tempfile = "3.23"
