[package]
name = "torsh-signal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Signal processing utilities for ToRSh with SciRS2 integration"

[lints]
workspace = true

[dependencies]
torsh-core = { workspace = true }
torsh-tensor = { workspace = true }
torsh-functional = { workspace = true }
torsh-linalg = { workspace = true }
# SciRS2 ecosystem for signal processing (following SCIRS2 POLICY)
# All numeric types and traits accessed through scirs2-core (POLICY compliant)
scirs2-core = { workspace = true }
scirs2-signal = { workspace = true, optional = true }
scirs2-fft = { workspace = true, optional = true }
thiserror = { workspace = true }
approx = { workspace = true }

[features]
default = []
simd = ["scirs2-core/simd"]
parallel = ["scirs2-core/parallel"]
scirs2-integration = ["scirs2-signal", "scirs2-fft"]
advanced-signal = ["scirs2-signal"]
fft-support = ["scirs2-fft"]

[dev-dependencies]
criterion = { workspace = true }
approx = { workspace = true }
